Replaced few exoplanets images and added Credits at README.md

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -345,7 +345,7 @@ body {
 }
 
 .K2-18b {
-  background-image: url(../images/exoplanet_images/K2-18b.jpeg);
+  background-image: url(../images/exoplanet_images/K2-18b.jpg);
 }
 
 .PH1b {
@@ -353,7 +353,7 @@ body {
 }
 
 .TRAPPIST-1d {
-  background-image: url(../images/exoplanet_images/TRAPPIST-1d.jpg);
+  background-image: url(../images/exoplanet_images/TRAPPIST-1d.png);
 }
 
 .Gliese-581c {
