--- a/templates/detailedExoplanet.html
+++ b/templates/detailedExoplanet.html
@@ -29,7 +29,7 @@
 				<hr class="detailed_separator">
                 </div>
 				<div id="detailed-anchor-container">
-					<a id="#first-a-detailed"
+					<a id="first-a-detailed"
 						href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"
 						><button class="buttons detailed-action">add favourites</button></a>
 					<a id="second-a-detailed"
