Modified height to 'photo_container' at massPhoto.html for extra large screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1720,6 +1720,10 @@ select {
     margin-bottom: 8%;
   }
 
+  #photo_container {
+      height: 48rem;
+  }
+
   .form-container {
     margin-top: 6.4rem;
   }
