--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1169,6 +1169,20 @@ select {
     margin: 1rem 0 2rem 0;
   }
 
+  #photo_action_button {
+      margin-bottom: 1rem;
+      margin-top: 5rem;
+  }
+
+  #photo_container {
+      width: 100%;
+      height: 29rem;
+  }
+
+  #mass_photo {
+      background-size: 100% 60%;
+  }
+
   #distance_from_earth {
     font-size: 96%;
   }
@@ -1443,6 +1457,20 @@ select {
     height: 51vh;  
   }
 
+  #photo_action_button {
+      margin-bottom: 1rem;
+      margin-top: 5rem;
+  }
+
+  #photo_container {
+      width: 100%;
+      height: 32rem;
+  }
+
+  #mass_photo {
+      background-size: 100% 60%;
+  }
+
   #col_add_exoplanet_message {
     padding: 0;
   }
@@ -1613,6 +1641,10 @@ select {
     width: 45%;
   }
 
+  #mass_photo {
+      background-size: contain;
+  }
+
   .top_buttons {
     width: 10rem;
   }
@@ -1639,6 +1671,10 @@ select {
   .detailed {
     width: 90%;
     height: 36vh;  
+  }
+
+  #photo_action_button {
+      margin-bottom: 15rem;
   }
 
   .user-info {
