Added aria labels

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -12,10 +12,10 @@
 	</div>
 	<div id="about-action" class="row main-action">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
+			<a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
+			<a aria-label="your favourites list" href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
 	</div>
 	<div id="about-text-container" class="row">
