--- a/templates/pages/alreadyFavourite.html
+++ b/templates/pages/alreadyFavourite.html
@@ -6,8 +6,8 @@
 			<div id="already-fav">
 				<p class="message">you have already added {{ favourite.planet_name }} to your favourites list.</p>
                 <div id="message-buttons">
-                <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
-                <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
+                <a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
+                <a aria-label="your favourites list" href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
                 </div>
 			</div>
 		</div>
