--- a/templates/pages/detailedExoplanet.html
+++ b/templates/pages/detailedExoplanet.html
@@ -29,10 +29,10 @@
 				<hr class="detailed_separator">
                 </div>
 				<div id="detailed-anchor-container">
-					<a id="first-a-detailed"
+					<a aria-label="add this exoplanet to your favourites list" id="first-a-detailed"
 						href="{{ url_for('favourite', exoplanet_id=detailed_exoplanet._id)}}"
 						><button class="buttons detailed-action">add favourites</button></a>
-					<a id="second-a-detailed"
+					<a aria-label="calculate your weight on this exoplanets" id="second-a-detailed"
 						href="{{ url_for('calculate_weight', exoplanet_mass=detailed_exoplanet.mass, exoplanet_name=detailed_exoplanet.planet_name, exoplanet_id=detailed_exoplanet._id) }}"
 						><button class="buttons detailed-action">calculate weight</button></a>
 				</div>
