--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -6,39 +6,39 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('about') }}">About</a>
+					<a class="nav-link nav_anchors" aria-label="what is about" href="{{ url_for('about') }}">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('exoplanets_display') }}">Main List</a>
+					<a class="nav-link nav_anchors" aria-label="our main-list" href="{{ url_for('exoplanets_display') }}">Main List</a>
 				</li>
                  
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('favourite_list') }}">Favourites List</a>
+					<a class="nav-link nav_anchors" aria-label="your favourites list" href="{{ url_for('favourite_list') }}">Favourites List</a>
 				</li>
                 
 				<li class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('insert_exoplanet') }}">Add Exoplanet</a>
+					<a class="nav-link nav_anchors" aria-label="insert an exoplanet" href="{{ url_for('insert_exoplanet') }}">Add Exoplanet</a>
 				</li>
                 
 			</ul>
                 {% if session.user %}
                 <ul class="nav navbar-nav navbar-right ml-auto">
                 <li id="profile" class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('profile', username=session['user']) }}">{{ session.user[0].capitalize() }}</a>
+					<a class="nav-link nav_anchors" aria-label="profile" href="{{ url_for('profile', username=session['user']) }}">{{ session.user[0].capitalize() }}</a>
 				</li>
                 
                 <li id="logout" class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('logout') }}">Log Out</a>
+					<a class="nav-link nav_anchors" aria-label="log out" href="{{ url_for('logout') }}">Log Out</a>
 				</li>
                 </ul>
                 {% else %}
                 <ul class="nav navbar-nav navbar-right ml-auto">
 				<li id="register-nav" class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('register') }}">Register</a>
+					<a class="nav-link nav_anchors" aria-label="register" href="{{ url_for('register') }}">Register</a>
 				</li>
                 
                 <li id="login-nav" class="nav-item">
-					<a class="nav-link nav_anchors" href="{{ url_for('login') }}">Log In</a>
+					<a class="nav-link nav_anchors" aria-label="login" href="{{ url_for('login') }}">Log In</a>
 				</li>
                 </ul>
                 {% endif %}
