--- a/templates/pages/exoplanetWeight.html
+++ b/templates/pages/exoplanetWeight.html
@@ -11,17 +11,10 @@
 	</div>
     <div id="row-weight-buttons" class="row">
     <div id="weight-buttons-container" class="col-12">
-    <a
-				href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
-    
-    <a
-				href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
-    
-    
-    <a
-				href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
-    
-    </div>
+        <a aria-label="calculate your weight on this exoplanet" href="{{ url_for('calculate_weight', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}"><button class="weight_buttons buttons">again</button></a>
+        <a aria-label="your favourites list" href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
+        <a aria-label="details" href="{{ url_for('favourite_detailed', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
+</div>
 </div>
 </div>
 
