--- a/templates/pages/exoplanets.html
+++ b/templates/pages/exoplanets.html
@@ -10,10 +10,10 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
+			<a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('gas_giants_planets') }}">
+			<a aria-label="gas giants" href="{{ url_for('gas_giants_planets') }}">
 				<button class="top_buttons buttons">gas giants</button>
 			</a>
 		</div>
@@ -26,10 +26,10 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
+			<a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><button class="top_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('rocky_planets') }}">
+			<a aria-label="rocky exoplanets" href="{{ url_for('rocky_planets') }}">
 				<button class="top_buttons buttons">rocky</button>
 			</a>
 		</div>
@@ -42,14 +42,13 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
-			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky</button></a>
+			<a aria-label="rocky exoplanets" href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
-			<a
-				href="{{ url_for('favourite_list', username=session['user']) }}"><button class="favourites top_buttons buttons">favourites</button></a>
+			<a aria-label="your favourites list" href="{{ url_for('favourite_list', username=session['user']) }}"><button class="favourites top_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
-			<a href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
+			<a aria-label="gas giants" href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
 		</div>
 		<div class="col-3 dropdown">
 			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -77,9 +76,9 @@
 					<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}} </p>
 					<hr class="separator">
 					<div class="centered_buttons">
-						<a href="{{ url_for('favourite', exoplanet_id=exoplanet._id)}}"
+						<a aria-label="add this exoplanet to your favourites list" href="{{ url_for('favourite', exoplanet_id=exoplanet._id)}}"
 							id="margin-left"><button id="favourite_button" class="exoplanets_display_buttons buttons">Add Favourites</button></a>
-						<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
+						<a aria-label="details" href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
 							id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
 					</div>
 				</div>
@@ -90,7 +89,7 @@
 			<div id="col_add_exoplanet_message" class="col-12">
 				<div id="add_exoplanet_message">
 					<p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your Favourites List
-						by simply entering its details <a href="{{ url_for('insert_exoplanet') }}">here</a>.</p>
+						by simply entering its details <a aria-label="insert an exoplanet" href="{{ url_for('insert_exoplanet') }}">here</a>.</p>
 				</div>
 			</div>
 		</div>
