--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -8,8 +8,8 @@
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
-			<a href="{{ url_for('about') }}"><div class="buttons home_buttons">about</div></a>
-			<a href="{{ url_for('exoplanets_display') }}"><div id="main-list" class="buttons home_buttons">main list</div></a>
+			<a aria-label="what is about" href="{{ url_for('about') }}"><div class="buttons home_buttons">about</div></a>
+			<a aria-label="our main list" href="{{ url_for('exoplanets_display') }}"><div id="main-list" class="buttons home_buttons">main list</div></a>
 		</div>
 	</div>
 </div>
