--- a/templates/pages/massPhoto.html
+++ b/templates/pages/massPhoto.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div id="photo_action_button" class="col-12">
-			<a href="{{ url_for('insert_exoplanet') }}"><button class="top_buttons buttons">back</button></a>
+			<a aria-label="insert an exoplanet" href="{{ url_for('insert_exoplanet') }}"><button class="top_buttons buttons">back</button></a>
 		</div>
 	</div>
 	<div class="row">
