Modified pattern attribute to receive float numbers, at distance from earth field

--- a/templates/pages/addExoplanet.html
+++ b/templates/pages/addExoplanet.html
@@ -21,7 +21,7 @@
   </div>
 							<div class="form-group">
                             <label for="distance_from_earth">Distance From Earth (Light Years):</label>
-								<input id="distance_from_earth" name="distance_from_earth" type="text" class="form-control input_planet" pattern="[0-9]{1,9}" required>
+								<input id="distance_from_earth" name="distance_from_earth" type="text" class="form-control input_planet" pattern="[0-9.]{1,9}" required>
   </div>
 								<div class="form-group">
                                 <label for="exampleFormControlSelect1">Type:</label>
